# TechProgSimpleLibrary

./: CMakeLists.txt
cmake/: toolchain_aarch64.cmake
src/: CMakeLists.txt
